removed unnecessary code/Views/Home/About.cshtml Added authentication

--- a/LitigationSoftware/LSWebApp/Views/Login/Index.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/Login/Index.cshtml
@@ -29,7 +29,7 @@
                     </td>
                     <td>
                         <div class="form-group">
-                            @Html.TextBoxFor(m => m.Username, new { @type = "email", @class = "form-control form-control-sm", @placeholder = "Enter email" })
+                            @Html.TextBoxFor(m => m.EmailAddress, new { @type = "email", @class = "form-control form-control-sm", @placeholder = "Enter email" })
                         </div>
                     </td>
 
