--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ComplianceList.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ComplianceList.cshtml
@@ -1,6 +1,7 @@
 ﻿@model LSWebApp.Models.ComplianceListModel
 @{
     ViewBag.Title = "Manage Compliances";
+    Layout = "~/Views/Shared/_LayoutDynemicMenu.cshtml";
 }
 <h2>Manage compliances</h2>
 <div>
