committing menu changes which are reverted

--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/GetCompanyList.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/GetCompanyList.cshtml
@@ -1,7 +1,7 @@
 ﻿@model  LSWebApp.Models.CompanyList
 @{
     ViewBag.Title = "GetCompanyList";
-    Layout = "~/Views/Shared/_LayoutDynemicMenu.cshtml";
+    //Layout = "~/Views/Shared/_LayoutDynemicMenu.cshtml";
 }
 <style>
     table, th, td {
