--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/Index.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model  LSWebApp.Models.CompanyModel
 @{
     ViewBag.Title = "My Dashboard";
+    //Layout = "~/Views/Shared/_LayoutDynemicMenu.cshtml";
 }
 
 <h3>Register a new company</h3>
